--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,6 +100,9 @@ a {
 
 .content-card {
     background-color: var(--contentCardBackground);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
     flex-grow: 1;
     width: 45%;
     margin: 10px 10px;
@@ -121,6 +124,11 @@ a {
 .your-garden, .good-to-plant {
     /* flex-grow: 5; */
     width: 100%;
+}
+
+.plants {
+    flex-grow: 1;
+    margin: 1rem 1em;
 }
 
 @media screen and (min-width: 768px) {
