--- a/assets/pages/yourGardenStyles.css
+++ b/assets/pages/yourGardenStyles.css
@@ -9,6 +9,7 @@
 }
 
 body {
+    font-size: 10px;
     font-family: "New Tegomin";
     color: var(--textGreen);
     background-color: #f5f5dc;
@@ -42,6 +43,7 @@ body {
     border: 1px solid #886b3e65;
     border-radius: 5px;
     background-color: #f0f0ec;
+    margin-bottom: 1rem;
 }
 
 .your-plants-container {
@@ -58,6 +60,8 @@ body {
 }
 
 .button {
+    width: 50%;
+    margin: 0 auto;
     border-radius: 5px;
     margin-top: 0.375rem;
     border: 1px solid #886b3e65;
