Changed API for better data. Reworked good to grow card to show team favourites

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,6 +129,14 @@ a {
 .plants {
     flex-grow: 1;
     margin: 1rem 1em;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+.card-content h3, img {
+    margin: .5em 0;
+    
 }
 
 @media screen and (min-width: 768px) {
