--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,7 @@ header {
 }
 
 .nav-list {
+    font-size: 16px;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -76,6 +77,7 @@ a {
 }
 
 .rainfall-icon-container {
+    font-size: 16px;
     display: flex;
     justify-content: center;
     align-items: center;
