--- a/assets/pages/yourGardenStyles.css
+++ b/assets/pages/yourGardenStyles.css
@@ -61,6 +61,7 @@ body {
 }
 
 .button {
+    font-size: 1.2rem;
     width: 50%;
     margin: 0 auto;
     border-radius: 5px;
@@ -70,12 +71,18 @@ body {
 .user-plants-table {
     flex-basis: 100%;
 }
+.user-plants-table * > {
+    font-size: 1.6rem;
+}
 
 th {
-    padding-bottom: 0.375rem;
     border-bottom: 2px solid var(--textGreen);
+    font-size: 1.2rem;
+    padding: 0.5rem 0;
 }
 td {
     padding-bottom: 0.25rem;
     text-align: center;
+    font-size: 1.2rem;
+    padding: 0.5rem 0;
 }
