--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,7 +59,7 @@ a {
 }
 
 .widget-container {
-    margin: 10px 3px 1.5px auto;
+    margin: 10px auto 3px auto;
     display: flex;
     flex-direction: row;
     align-items: center;
